test/e2e/chainsaw/hybridgateway/httproute-path-matching/03-httproute-pathexact.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($httproute_name)
  namespace: ($kong_namespace)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - path:
            type: Exact
            value: /get
      backendRefs:
        - name: httpbin
          port: 80
