test/e2e/chainsaw/hybridgateway/httproute-path-matching/07-httproute-pathexact.yaml
---
# HTTPRoute with Exact path matching
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ($httproute_name)
  namespace: ($http_route_namespace)
  annotations:
    konghq.com/strip-path: "false"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ($gateway_name)
  rules:
  - matches:
      - path:
          type: Exact
          value: ($route_path)
        method: POST
    backendRefs:
      - name: ($httpbin_service_name)
        port: ($httpbin_service_port)
