test/e2e/chainsaw/hybridgateway/httproute-path-matching/00-assert-httpbin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: kong
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: kong
status:
  (conditions[?type == 'Available']):
    - status: 'True'
  readyReplicas: 1
  replicas: 1
