test/e2e/chainsaw/hybridgateway/httproute-path-matching/01-assert-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kong
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong-path-matching
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-path-matching
  namespace: kong
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'DataPlaneReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'KonnectGatewayControlPlaneProgrammed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'KonnectExtensionReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'GatewayService']):
    - status: 'True'
      reason: Ready
