test/e2e/chainsaw/hybridgateway/httproute-path-matching/03-assert-pathexact.yaml
---
# Assert HTTPRoute is accepted and programmed
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pathexact-route
  namespace: kong
status:
  parents:
    - parentRef:
        name: kong-foo
        group: gateway.networking.k8s.io
        kind: Gateway
      controllerName: konghq.com/gateway-operator
      (conditions[?type == 'Accepted']):
        - status: "True"
          reason: Accepted
      (conditions[?type == 'ResolvedRefs']):
        - status: "True"
          reason: ResolvedRefs
      (conditions[?type == 'KongRouteProgrammed']):
        - status: "True"
          reason: KongRouteProgrammed
      (conditions[?type == 'KongServiceProgrammed']):
        - status: "True"
          reason: KongServiceProgrammed
      (conditions[?type == 'KongUpstreamProgrammed']):
        - status: "True"
          reason: KongUpstreamProgrammed
      (conditions[?type == 'KongTargetProgrammed']):
        - status: "True"
          reason: KongTargetProgrammed
