test/e2e/chainsaw/hybridgateway/httproute-path-matching/04-assert-httproute-multipaths.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: path-matching
  namespace: kong
spec:
  rules:
    - matches:
        - path:
            type: Exact
            value: /get
        - path:
            type: Exact
            value: /post
        - path:
            type: PathPrefix
            value: /status
      backendRefs:
        - name: httpbin
          port: 80
status:
  parents:
    - parentRef:
        name: kong-path-matching
        group: gateway.networking.k8s.io
        kind: Gateway
      controllerName: konghq.com/gateway-operator
      (conditions[?type == 'Accepted']):
        - status: "True"
          reason: Accepted
      (conditions[?type == 'ResolvedRefs']):
        - status: "True"
          reason: ResolvedRefs
      (conditions[?type == 'KongRouteProgrammed']):
        - status: "True"
          reason: KongRouteProgrammed
