test/e2e/chainsaw/hybridgateway/httproute-path-matching/05-assert-httproute-strippath.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ($httproute_name)
  namespace: ($kong_namespace)
  annotations:
    konghq.com/strip-path: "true"
spec:
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: httpbin
          port: 80
status:
  parents:
    - parentRef:
        name: ($gateway_name)
        group: gateway.networking.k8s.io
        kind: Gateway
      controllerName: konghq.com/gateway-operator
      (conditions[?type == 'Accepted']):
        - status: "True"
          reason: Accepted
      (conditions[?type == 'ResolvedRefs']):
        - status: "True"
          reason: ResolvedRefs
      (conditions[?type == 'KongRouteProgrammed']):
        - status: "True"
          reason: KongRouteProgrammed
